Tilitin 2.0 - Uudelleennimeäminen ja versiopäivitys
- Versio 1.6.0 → 2.0.0
- APP_NAME 'Tilitin' → 'Tilitin 2.0'
- Lisätty APP_DATA_NAME yhteensopivuuteen vanhan version kanssa
- Päivitetty build-skriptit ja dokumentaatio
- Rinnakkainen asennus mahdollinen vanhan Tilittimen kanssa